--- a/index.html
+++ b/index.html
@@ -1,144 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta property="og:description" content="Simple Plot to Manage and Share Drive with your Friends" />
-<meta property="og:image" content="/favicon.ico" />
-<meta property="og:type" content="website" />
-<meta name="author" content="GDToT">
-<title>GDToT | Simple Plot to Manage and Share Drive with your Friends</title>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script async="async" type="text/javascript" src="/assets/js/gdt.min.js"></script>
-<script async="async" type="text/javascript" src="/assets/js/get-stats2.5.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script async="async" type="text/javascript" src="/assets/js/gdtot.min.js"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<link href="/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="/assets/css/sb-admin-2.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-<link rel="shortcut icon" href="/favicon.ico">
-<meta name="theme-color" content="#151B25" />
-<style>
-          .Blink {
-  animation: blinker 0.3s cubic-bezier(.5, 0, 1, 1) infinite alternate;  
-}
-@keyframes blinker {  
-  from { opacity: 1; }
-  to { opacity: 0; }
-}
-      </style>
+<title>Share Drive with your Friends</title>
 </head>
-</ul>
-
-
-<div id="content-wrapper" class="d-flex flex-column">
-
-<div id="content" style="background-color:#36393f; background-image: linear-gradient(#151B25, #6B6265, #36393f);">
-
-<nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow">
-<button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-<i class="fa fa-bars"></i>
-</button>
-<ul class="navbar-nav ml-auto">
-<a href="/"><img class="img-profile" src="/assets/img/yourlogo.png"></a>
-<div class="topbar-divider d-none d-sm-block"></div>
-<li><a class="btn btn-md btn-outline-light" href="/login">Login | Register</a></li>
-</ul>
-</nav>
-
-<div class="container-fluid">
-
-
-<div class="row">
-<div class="col-xl-12 col-md-12 mb-4">
-
-<div class="card shadow mb-4 bg-gradient-secondary">
-<div class="card-header py-3 bg-gradient-secondary">
-<h4 class="m-0 font-weight-bold text-light" align="center">Welcome to GDToT</h4>
-</div>
-<div class="card-body">
-<div class="text-center">
-<img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 10rem;" src="/assets/img/gdtot.png" alt="">
-</div>
-<div class="text-center text-light">
-<p>* Domain has been changed. Read Here: <a class="text-warning" href="/page/how-to-change-url-in-all-posts-or-pages-of-a-wordpress-website" target="_blank">How to Change url in All Posts or Pages of a Wordpress Website*</a></p>
-<p>GDToT Provides Google Drive File Manager. Simple Plot to Manage and Share Drive with your Friends!</p>
-<hr><p style="color:#BEBEBE;">You need to login to start sharing your GDrive</p>
-<a href="/login">
-<img src="/assets/img/google.png" style="height:50px; width:auto" />
-</a>
-<p style="color:#BEBEBE; font-size:16px;">Don't have an account? <a class="text-light" href="/login">Sign Up !</a></p>
-</div>
-</div>
-</div>
-
-</div>
-
-
-
-
-</div>
-</div>
-
-</div>
-
-
-<footer class="sticky-footer bg-dark">
-<div class="container my-auto">
-<div class="copyright text-center text-light my-auto">
-<span>&copy; 2022 Copyright GDToT</span>
-</div>
-<br>
-<div class="copyright text-center my-auto">
-<span class="text-light"><a class="text-light" href="/page/privacy-policy">Privacy Policy</a> | <a class="text-light" href="/page/terms-conditions">Terms & Conditions</a> | <a class="text-light" href="/page/about">About us</a></span>
-</div>
-</div>
-</footer>
-
-</div>
-
-</div>
-
-
-<a class="scroll-to-top rounded" href="#page-top">
-<i class="fas fa-angle-up"></i>
-</a>
-
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
-<div class="modal-content">
-<div class="modal-header">
-<h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
-<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-<span aria-hidden="true">×</span>
-</button>
-</div>
-<div class="modal-footer">
-<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-<a class="btn btn-primary" href="/login.php?action=logout">Logout</a>
-</div>
-</div>
-</div>
-</div>
-
-<script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<script src="/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-<script src="/assets/js/sb-admin-2.min.js"></script>
-
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130203604-4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-130203604-4');
-</script>
+ <iframe src="https://new.gdtot.eu/" width="100%"> </iframe
+       
 </body>
 </html>
