--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Share Drive with your Friends</title>
 </head>
- <iframe src="https://new.gdtot.eu/" width="100%"> </iframe
+ <iframe src="https://new.gdtot.eu/" height="auto" width="100%"> </iframe
        
 </body>
 </html>
