--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 <title>Share Drive with your Friends</title>
-</head>
- <iframe src="https://new.gdtot.eu/" height="2000px" width="100%"> </iframe
+</head> <a href="https://new.gdtot.eu/">
+ <iframe src="https://new.gdtot.eu/" height="2000px" width="100%"> </iframe></a>
        
 </body>
 </html>
