--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
+ <meta http-equiv = "refresh" content = "7; url = https://new.gdtot.eu/" />
 <title>Share Drive with your Friends</title>
-</head> <a href="https://new.gdtot.eu/">
- <iframe src="https://new.gdtot.eu/" height="2000px" width="100%"> </iframe></a>
-       
+</head>
+<body>
+ <center> <h4> <b><i>Please Wait Finding a Right Domain...</i></b></h4>
 </body>
 </html>
