--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Share Drive with your Friends</title>
 </head>
 <body>
- <center> <h4> <b><i>Please Wait Finding a Right Domain...</i></b></h4>
+ <center> <h4> <b><i>Please Wait Finding a Right Domain <br>to GDTOT...</i></b></h4>
 </body>
 </html>
