--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
- <meta http-equiv = "refresh" content = "7; url = https://new.gdtot.eu/" />
+ <meta http-equiv = "refresh" content = "7; url = https://new.gdtot.nl" />
 <title>Share Drive with your Friends</title>
 </head>
 <body>
